# sms-reader

./: Cargo.toml
src/: main.rs
src-tauri/: tauri.conf.json
src-tauri/src/: main.rs
