[package]
name = "sms-reader"
authors = ["3methxan"]
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.9", features = ["json"]}
serde = { version = "1.0.216", features = ["derive"]}
tokio = { version = "1.42.0", features = ["full"]}
base64 = "0.22.1" #Auth
rpassword = "7.3.1" #Hide pw
serde_json = "1.0.133"
signal-hook = "0.3.17"
signal-hook-registry = "1.4.2"

[package.metadata.acknowledgments]
ai_assistance = "OpenAI's GPT AI Assistant was used to assist in the development of this project."